Fixed contrast for header H1

--- a/styles/base.css
+++ b/styles/base.css
@@ -39,7 +39,7 @@ header img
 }
 header h1
 {
-    color: white;
+    color: black;
 }
 main
 {
